prusti-tests/tests/verify/ui/calls.stderr
error: [Prusti: verification error] the asserted expression might not hold
  --> $DIR/calls.rs:29:5
   |
29 |     assert!(z == 5);
   |     ^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `assert` (in Nightly builds, run with -Z macro-backtrace for more info)

error: [Prusti: verification error] postcondition might not hold.
  --> $DIR/calls.rs:36:9
   |
36 |         result == 3     // test that we get correct span information
   |         ^^^^^^^^^^^
   |
note: the error originates here
  --> $DIR/calls.rs:44:1
   |
44 | / fn test_max3() -> i32 {
45 | |     let a = 4;
46 | |     let b = 3;
47 | |     max(a, b)
48 | | }
   | |_^

error: aborting due to 2 previous errors

